Add social button

--- a/content/post/2020-05-10-hugopost.md
+++ b/content/post/2020-05-10-hugopost.md
@@ -44,9 +44,17 @@ hugo new post/yyyy-mm-dd-<title>.md
 hugo new post/yyyy-mm-dd-<title>/index.md
 ```
 
+確認するにはこう
 ```sh
 hugo serve -D
 # open localhost:1313
+
+```
+
+themeを変更した場合はこんな感じ。
+```
+cd theme/even
+sass --watch --sourcemap=none assets/sass/main.scss:resources/_gen/assets/scss/sass/main.scss_48b060fe05b0a273d182ef83c0605941.content
 ```
 
 書き終わったら `draft: true` を `draft: false` に変える。
