--- a/content/post/2020-05-10-hugopost.md
+++ b/content/post/2020-05-10-hugopost.md
@@ -2,6 +2,7 @@
 title: "HugoでGithubPagesへ記事を公開する"
 date: 2020-05-10T17:20:03+09:00
 draft: false
+summary: Hugoでこのブログに記事を投稿する手順をメモ。備忘録。
 ---
 
 Hugoでこのブログに記事を投稿する手順をメモ。備忘録。
